# beast-json

./: .gitignore  404.html  API_READINESS_REPORT.html  API_READINESS_REPORT.md  CMakeLists.txt  Doxyfile  GETTING_STARTED.html  LICENSE  README.md  SECURITY.md  TECHNICAL_REFERENCE.html  TEST_CASES.html  benchmark-results.json  hashmap.json  index.html  robots.txt  sitemap.xml
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  dependabot-cleanup.yml  docs.yml  release.yml  sanitizers.yml
api/: index.html
api/reference/: GETTING__STARTED_8md.html  TECHNICAL__REFERENCE_8md.html  TEST__CASES_8md.html  annotated.html  classes.html  classqbuem_1_1json_1_1DocumentView-members.html  classqbuem_1_1json_1_1DocumentView.html  classqbuem_1_1json_1_1Parser-members.html  classqbuem_1_1json_1_1Parser.html  classqbuem_1_1json_1_1SafeValue-members.html  classqbuem_1_1json_1_1SafeValue.html  classqbuem_1_1json_1_1Value-members.html  classqbuem_1_1json_1_1Value.html  classqbuem_1_1json_1_1Value_1_1ArrayIterator-members.html  classqbuem_1_1json_1_1Value_1_1ArrayIterator.html  classqbuem_1_1json_1_1Value_1_1ArrayRange-members.html  classqbuem_1_1json_1_1Value_1_1ArrayRange.html  classqbuem_1_1json_1_1Value_1_1ObjectIterator-members.html  classqbuem_1_1json_1_1Value_1_1ObjectIterator.html  classqbuem_1_1json_1_1Value_1_1ObjectRange-members.html  classqbuem_1_1json_1_1Value_1_1ObjectRange.html  conceptqbuem_1_1json_1_1JsonFloat.html  conceptqbuem_1_1json_1_1JsonInteger.html  conceptqbuem_1_1json_1_1JsonReadable.html  conceptqbuem_1_1json_1_1JsonScalarOnly.html  conceptqbuem_1_1json_1_1JsonWritable.html  conceptqbuem_1_1json_1_1detail_1_1HasAppendQbuemJson.html  conceptqbuem_1_1json_1_1detail_1_1HasFromQbuemJson.html  conceptqbuem_1_1json_1_1detail_1_1HasNexusPulse.html  conceptqbuem_1_1json_1_1detail_1_1HasNexusPulseH.html  conceptqbuem_1_1json_1_1detail_1_1HasQbuemJsonFW.html  conceptqbuem_1_1json_1_1detail_1_1HasToQbuemJson.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailArith.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailBool.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailFixedArr.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailMap.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailOptional.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailSeq.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailSet.html  conceptqbuem_1_1json_1_1detail_1_1JsonDetailStrLike.html  (+121 more)
assets/: API_READINESS_REPORT.md.CT9lk7qn.js  API_READINESS_REPORT.md.CT9lk7qn.lean.js  GETTING_STARTED.md.CRNJQTG_.js  GETTING_STARTED.md.CRNJQTG_.lean.js  TECHNICAL_REFERENCE.md.BOQDXy_E.js  TECHNICAL_REFERENCE.md.BOQDXy_E.lean.js  TEST_CASES.md.B5ixU7oW.js  TEST_CASES.md.B5ixU7oW.lean.js  api_index.md.CWCsK_X6.js  api_index.md.CWCsK_X6.lean.js  app.Dn8GyOiC.js  guide_acknowledgments.md.D_roTiNq.js  guide_acknowledgments.md.D_roTiNq.lean.js  guide_allocators.md.wDjhXlEP.js  guide_allocators.md.wDjhXlEP.lean.js  guide_benchmarks.md.BHl9RQPE.js  guide_benchmarks.md.BHl9RQPE.lean.js  guide_bindings.md.DCTqcNQY.js  guide_bindings.md.DCTqcNQY.lean.js  guide_debugging.md.BlOOx9BW.js  guide_debugging.md.BlOOx9BW.lean.js  guide_errors.md.B6sgWzDV.js  guide_errors.md.B6sgWzDV.lean.js  guide_getting-started.md.Yd-Ehajg.js  guide_getting-started.md.Yd-Ehajg.lean.js  guide_hft-patterns.md.B-idOt2n.js  guide_hft-patterns.md.B-idOt2n.lean.js  guide_introduction.md.eqMdq4ya.js  guide_introduction.md.eqMdq4ya.lean.js  guide_low-latency-patterns.md.DDPrHYV_.js  guide_low-latency-patterns.md.DDPrHYV_.lean.js  guide_mapping.md.BXKRpqvE.js  guide_mapping.md.BXKRpqvE.lean.js  guide_parsing.md.oyXRL7sO.js  guide_parsing.md.oyXRL7sO.lean.js  guide_serialization.md.LIPbZ-we.js  guide_serialization.md.LIPbZ-we.lean.js  guide_vision.md.DpVDrnPl.js  guide_vision.md.DpVDrnPl.lean.js  index.md.TrxPxaqB.js  (+14 more)
assets/chunks/: arc.CaqVsOna.js  architectureDiagram-2XIMDMQ5.CGiugprp.js  basePickBy.Cc98UcWW.js  baseUniq.C-frGpG_.js  blockDiagram-WCTKOSBZ.b4G9cBCe.js  c4Diagram-IC4MRINW.BkDcFIEm.js  channel.DUN4m1jz.js  chunk-4BX2VUAB.BIiKl3cw.js  chunk-55IACEB6.CBLDOS9K.js  chunk-FMBD7UC4.DkX-7JkN.js  (+37 more)
benchmarks/: CMakeLists.txt  bench.cpp  bench_all.cpp  bench_bindings.py  bench_hft.cpp  bench_lazy_dom.cpp  bench_quick.cpp  bench_ser_profile.cpp  bench_structs.cpp  utils.hpp
bindings/: CMakeLists.txt
bindings/c/: CMakeLists.txt  qbuem_json_c.cpp  qbuem_json_c.h
bindings/go/: decode.go  go.mod  marshal.go  qbuem_bench_test.go  qbuem_json.go  qbuem_json_test.go
bindings/python/: CMakeLists.txt  example.py  pyproject.toml  qbuem_json.py  qbuem_json_py.cpp
bindings/python/bench/: bench.py
bindings/rust/: Cargo.toml
bindings/rust/benches/: qbuem_bench.rs
bindings/rust/src/: lib.rs  qbuem_rust_shim.cpp  qbuem_rust_shim.hpp
docs/: API_READINESS_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  OPTIMIZATION_FAILURES.md  PERFORMANCE.md  ROADMAP.md  TECHNICAL_REFERENCE.md  TEST_CASES.md  TODO.md  doxygen_custom.css  index.md  package-lock.json  package.json
fuzz/: CMakeLists.txt  fuzz_dom.cpp  fuzz_lazy.cpp  fuzz_parse.cpp  fuzz_rfc8259.cpp
guide/: acknowledgments.html  allocators.html  benchmarks.html  bindings.html  debugging.html  errors.html  getting-started.html  hft-patterns.html  introduction.html  low-latency-patterns.html  mapping.html  parsing.html  serialization.html  vision.html
tests/: CMakeLists.txt  repro_bugs.cpp  test_bitmap.cpp  test_bitmap_offsets.cpp  test_comments.cpp  test_complex_stl.cpp  test_compliance.cpp  test_control_char.cpp  test_dom_roundtrip.cpp  test_dom_types.cpp  test_duplicate_keys.cpp  test_errors.cpp  test_lazy_roundtrip.cpp  test_lazy_types.cpp  test_mutations.cpp  test_relaxed.cpp  test_serializer.cpp  test_stl_exhaustive.cpp  test_strict_number.cpp  test_trailing_commas.cpp  test_unicode.cpp  test_utf8_validation.cpp  test_value_accessors.cpp
theory/: architecture.html  nexus-fusion.html  numeric-serialization.html  russ-cox.html  simd.html  zero-allocation.html
(+369 files in other folders)
